# docs/swagger.yaml
@@ -77,6 +77,26 @@ definitions:
     - email
     - password
     type: object
+  models.Order:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      order_status:
+        type: string
+      updatedAt:
+        type: string
+      userID:
+        type: string
+    type: object
+  models.OrderUpdateInput:
+    properties:
+      order_status:
+        type: string
+    type: object
   models.RegisterInput:
     properties:
       email:
@@ -127,6 +147,17 @@ definitions:
         type: integer
       user_id:
         type: string
+    required:
+    - rating
+    type: object
+  models.ReviewUpdateInput:
+    properties:
+      comment:
+        type: string
+      rating:
+        maximum: 5
+        minimum: 1
+        type: integer
     required:
     - rating
     type: object
@@ -419,6 +450,29 @@ paths:
       summary: Update Item Menu.
       tags:
       - Item
+  /item/{id}/review:
+    get:
+      consumes:
+      - application/json
+      description: Get all review by item ID.
+      parameters:
+      - description: Item ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Review'
+            type: array
+      summary: Get all review on specific item.
+      tags:
+      - Review
   /login:
     post:
       consumes:
@@ -442,6 +496,105 @@ paths:
       summary: User login
       tags:
       - Auth
+  /order:
+    post:
+      consumes:
+      - application/json
+      description: Add new order, This endpoint requires user role. The role is checked
+        based on the user's token.
+      parameters:
+      - description: the body to add an order
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/models.Order'
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Insert new order.
+      tags:
+      - Order
+  /order/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete one user order, This endpoint requires user role. The role
+        is checked based on the user's token.
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Delete user order.
+      tags:
+      - Order
+    patch:
+      consumes:
+      - application/json
+      description: Update existing user order, This endpoint requires user role. The
+        role is checked based on the user's token.
+      parameters:
+      - description: the body to update order
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/models.OrderUpdateInput'
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Order'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Update user order.
+      tags:
+      - Order
   /register:
     post:
       consumes:
@@ -495,6 +648,73 @@ paths:
       security:
       - BearerToken: []
       summary: Insert Item Review.
+      tags:
+      - Review
+  /review/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete one review, This endpoint requires user role. The role is
+        checked based on the user's token.
+      parameters:
+      - description: Review ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Review'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Delete Item review.
+      tags:
+      - Review
+    patch:
+      consumes:
+      - application/json
+      description: Update existing user review, This endpoint requires user role.
+        The role is checked based on the user's token.
+      parameters:
+      - description: the body to update review
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/models.ReviewUpdateInput'
+      - description: Review ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: 'Authorization. How to input in swagger : ''Bearer <insert_your_token_here>'''
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Review'
+            type: array
+      security:
+      - BearerToken: []
+      summary: Update user review.
       tags:
       - Review
 swagger: "2.0"
