# models/order.go
@@ -7,8 +7,11 @@ import (
 
 type Order struct {
 	gorm.Model
-	Order_status  string         `json:"order_status"`
-	Total_amount  int            `json:"total_amount"`
+	Order_status  string         `json:"order_status" gorm:"default:waiting for checkout"`
 	UserID        uuid.UUID      `gorm:"type:char(36)"`
 	Order_details []Order_detail `json:"-" gorm:"foreignkey:OrderID"`
+}
+
+type OrderUpdateInput struct {
+	Order_status string `json:"order_status"`
 }
